# pocketbook-readwise

./: .gitignore  .sync_cache.json  README.md  VIBE.md  pocketbook_sync.py  pyproject.toml  requirements.txt  sync.sh
.github/workflows/: update-vibe-badge.yml
